OpenCL - CPU + GPU + GPU = Crash #44831

Closed
opened 2015-05-24 22:16:47 +02:00 by Grzegorz Wereszko · 16 comments

System Information
Windows 7 64bit
Nvidia GTX 680
AMD R9 290X
AMD FX-8350

Blender Version
Broken:

Build : blender-2.75-testbuild1-windows64
 - OpenCL on CPU - Crash
 - OpenCL on CPU + GTX 680 + R9 290X - Crash

Worked:
- OpenCL on GTX 680 - worked
- OpenCL on R9-290x - worked

Short description of error
Application crashes when rendering

Exact steps for others to reproduce the error
With attached file. When changing rendering from CPU to GPU and in user preference changing the OpenCL device to FX8350 CPU, it crashes. If selected in user preference all devices (CPU + Nvidia GPU + AMD GPU) it also crashes.

Lack of option to select Nvidia GPU + AMD GPU OpenCL devices to test if the error is simply caused due to the OpenCL CPU code.

INcluded file does not have every element linked (as the HDR - hence purple hue - so that can be ignored?)

table2.blend

**System Information** Windows 7 64bit Nvidia GTX 680 AMD R9 290X AMD FX-8350 **Blender Version** Broken: ``` Build : blender-2.75-testbuild1-windows64 ``` - OpenCL on CPU - Crash - OpenCL on CPU + GTX 680 + R9 290X - Crash Worked: - OpenCL on GTX 680 - worked - OpenCL on R9-290x - worked **Short description of error** Application crashes when rendering **Exact steps for others to reproduce the error** With attached file. When changing rendering from CPU to GPU and in user preference changing the OpenCL device to FX8350 CPU, it crashes. If selected in user preference all devices (CPU + Nvidia GPU + AMD GPU) it also crashes. Lack of option to select Nvidia GPU + AMD GPU OpenCL devices to test if the error is simply caused due to the OpenCL CPU code. INcluded file does not have every element linked (as the HDR - hence purple hue - so that can be ignored?) [table2.blend](https://archive.blender.org/developer/F179693/table2.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Prodeous

Added subscriber: @Prodeous

Added subscribers: @Sergey, @ThomasDinges

Added subscribers: @Sergey, @ThomasDinges

I can confirm crashes here with Intel i7 + Nvidia Geforce 540M on Windows 7 x64.
It's the Intel device that crashes here, the Nvidia one alone works fine.

@Sergey: We might want to limit multi device somehow? Vanilla Master (without environment flags) will use both split and mega kernel and different feature sets in such a setup. Ideally this should only result in render differences per tile, but there might be something else that goes wrong.

I can confirm crashes here with Intel i7 + Nvidia Geforce 540M on Windows 7 x64. It's the Intel device that crashes here, the Nvidia one alone works fine. @Sergey: We might want to limit multi device somehow? Vanilla Master (without environment flags) will use both split and mega kernel *and* different feature sets in such a setup. Ideally this should only result in render differences per tile, but there might be something else that goes wrong.

@ThomasDinges, it is handy to keep CPU OpenCL working for the development purposes. the option is not whitelisted by default as far as i concerned, so any use of it is kinda "on own risk" and "for investigation purposes only".

I can not reproduce crash on my laptop with windows 7 and i5 CPU, regardless if it's just CPU or CPU+GPU (GPU is gt520m).

What's the version of intel opencl sdk you're using?

@ThomasDinges, it is handy to keep CPU OpenCL working for the development purposes. the option is not whitelisted by default as far as i concerned, so any use of it is kinda "on own risk" and "for investigation purposes only". I can not reproduce crash on my laptop with windows 7 and i5 CPU, regardless if it's just CPU or CPU+GPU (GPU is gt520m). What's the version of intel opencl sdk you're using?

I got it from here: https://software.intel.com/en-us/articles/opencl-drivers

"OpenCL™ Runtime 15.1 for Intel® Core™ and Intel® Xeon® Processors for Windows* OS (64-bit & 32-bit)"

I got it from here: https://software.intel.com/en-us/articles/opencl-drivers "OpenCL™ Runtime 15.1 for Intel® Core™ and Intel® Xeon® Processors for Windows* OS (64-bit & 32-bit)"

@ThomasDinges, excellent. So did i =/ Will give it another attempt to reproduce the issue again later.

One more question tho: are you using own builds or builds from buildbot?

@ThomasDinges, excellent. So did i =/ Will give it another attempt to reproduce the issue again later. One more question tho: are you using own builds or builds from buildbot?

Self build (Scons), but I double checked with "blender-2.74-7fd93dc-win64" from Buildbot just now and it crashes as well, default cube scene and the blend from this report.

Self build (Scons), but I double checked with "blender-2.74-7fd93dc-win64" from Buildbot just now and it crashes as well, default cube scene and the blend from this report.

Assigning BF Blender: Next project sine it's nice to have this addressed prior to RC.

Assigning BF Blender: Next project sine it's nice to have this addressed prior to RC.

I would recommend that for current release the CPU option is disabled till solution is in place. Most people do not know the option is "on own risk" and "for investigation purposes only". If we see this option we would like it to not crash the applicaiton.

additionally i'm curious why I can't select just both of the GPU's (680+r9290) excluding the CPU option. I want to test if the two GPU's can cooperate in one render.

I would recommend that for current release the CPU option is disabled till solution is in place. Most people do not know the option is "on own risk" and "for investigation purposes only". If we see this option we would like it to not crash the applicaiton. additionally i'm curious why I can't select just both of the GPU's (680+r9290) excluding the CPU option. I want to test if the two GPU's can cooperate in one render.

If you can see non-AMD GPU in the OpenCL list without setting any of the environment variables then there's bug in the device enumeration.

If you're setting environment variable then you're expected to see all the devices. By setting the variable you're already agreeing that there might be some issues. Forcing CPU from being always disabled is the wrong solution because while it crashes for someones for others it works just fine.

If you can see non-AMD GPU in the OpenCL list without setting any of the environment variables then there's bug in the device enumeration. If you're setting environment variable then you're expected to see all the devices. By setting the variable you're already agreeing that there might be some issues. Forcing CPU from being always disabled is the wrong solution because while it crashes for someones for others it works just fine.
Member

Added subscriber: @MartijnBerger

Added subscriber: @MartijnBerger
Member
additionally i'm curious why I can't select just both of the GPU's (680+r9290) excluding the CPU option. I want to test if the two GPU's can cooperate in one render.

Well our multi device does not show all combinations of devices possible. The combo box selector thingy would become very very very long in some situations and this is technically not hard to solve but it involves touching the UI.

``` additionally i'm curious why I can't select just both of the GPU's (680+r9290) excluding the CPU option. I want to test if the two GPU's can cooperate in one render. ``` Well our multi device does not show all combinations of devices possible. The combo box selector thingy would become very very very long in some situations and this is technically not hard to solve but it involves touching the UI.

This issue was referenced by cf19012fb0

This issue was referenced by cf19012fb0f61f4b1af6c05d3fbce9649a56147c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@6f24f462fa

This issue was referenced by blender/cycles@6f24f462fa2c282431525d524b3652b8b44db50f
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44831
No description provided.