Fix T44831: Crash when using Intel OpenCL with split kernel

The issue was caused by underallocation of object motion related arrays,
which happened by accident.